--- a/main.html
+++ b/main.html
@@ -10,6 +10,9 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<div>
+		<a href="https://www.youtube.com/watch?v=27CBPR7CSks&list=RD27CBPR7CSks&start_radio=1">My current favourite song is KUN FAYA KUN</a>
+	</div>
 
 </body>
 
